# painel_municipal

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  app.py  deploy.sh  docker-compose.yml  download_reports_by_page_missing_fix.sh  requirements.txt  tabela_completa.csv
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/application/: dependencies.py  router.py
backend/src/core/: config.py  constants.py
backend/src/domain/: entities.py  interfaces.py
backend/src/helpers/common/formatting/: number_formatting_processing.py
backend/src/infrastructure/: database.py  image_service.py  pdf_service.py  project_info_service.py  repository.py
backend/src/static/report/: report_template.html  report_template_old.html  report_template_old2.html
backend/src/static/report/css/: style.css
backend/src/static/report/page_01/: report_template.html
backend/src/static/report/page_02/: report_template.html
backend/src/static/report/page_02/css/: style.css
backend/src/static/report/pagina0/: data.js  index.html  styles.css
backend/src/static/report/pagina1/: data.js  index.html  styles.css
backend/src/static/report/pagina2/: data.js  index.html  styles.css
backend/src/static/report/pagina2/shared/js/: app.js
backend/src/static/report/pagina3/: data.js  index.html  styles.css
backend/src/static/report/pagina3_OLD/: data.js
backend/src/static/report/pagina4/: data.js  index.html  styles.css
backend/src/static/report/pagina5/: data.js  index.html  styles.css
backend/src/static/report/pagina6/: data.js  index.html  styles.css
(+61 files in other folders)
