[project]
name = "backend"
version = "0.1.1"
description = "Painel Municipal Backend API"
authors = [
    {name = "Mário Carvalho", email = "mariodearaujocarvalho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pdfkit (>=1.0.0,<2.0.0)",
    "fastapi",
    "uvicorn",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "weasyprint",
    "jinja2",
    "slowapi (>=0.1.9,<0.2.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"