[project]
name = "backend"
version = "0.1.4"
description = "Folha Municipal Backend API"
authors = [
    {name = "Mário Carvalho", email = "mariodearaujocarvalho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "jinja2",
    "slowapi (>=0.1.9,<0.2.0)",
    "babel (>=2.18.0,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "playwright (>=1.59.0,<2.0.0)",
    "pypdf (>=4.0.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"